--- a/RoomMng/RoomMng.vcxproj
+++ b/RoomMng/RoomMng.vcxproj
@@ -128,6 +128,10 @@
     <None Include="res\RoomMng.rc2" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="res\bitmap1.bmp" />
+    <Image Include="res\bitmap2.bmp" />
+    <Image Include="res\FACE.BMP" />
+    <Image Include="res\MING.BMP" />
     <Image Include="res\RoomMng.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
