--- a/RoomMng/RoomMng.vcxproj.filters
+++ b/RoomMng/RoomMng.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="RoominfoSet.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Setroomdlg.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="RoomMng.cpp">
@@ -72,6 +75,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="RoominfoSet.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Setroomdlg.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
