--- a/RoomMng/RoomMng.vcxproj.filters
+++ b/RoomMng/RoomMng.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="Setroomdlg.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FindRoomDlg.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="RoomMng.cpp">
@@ -78,6 +81,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Setroomdlg.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FindRoomDlg.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
