implement checkout function

--- a/RoomMng/RoomMng.vcxproj
+++ b/RoomMng/RoomMng.vcxproj
@@ -105,6 +105,8 @@
   <ItemGroup>
     <ClInclude Include="CheckinDlg.h" />
     <ClInclude Include="CheckinSet.h" />
+    <ClInclude Include="CheckoutDlg.h" />
+    <ClInclude Include="FindchechinDlg.h" />
     <ClInclude Include="FindRoomDlg.h" />
     <ClInclude Include="LoginDlg.h" />
     <ClInclude Include="Resource.h" />
@@ -119,6 +121,8 @@
   <ItemGroup>
     <ClCompile Include="CheckinDlg.cpp" />
     <ClCompile Include="CheckinSet.cpp" />
+    <ClCompile Include="CheckoutDlg.cpp" />
+    <ClCompile Include="FindchechinDlg.cpp" />
     <ClCompile Include="FindRoomDlg.cpp" />
     <ClCompile Include="LoginDlg.cpp" />
     <ClCompile Include="RoominfoSet.cpp" />
