--- a/RoomMng/RoomMng.vcxproj.filters
+++ b/RoomMng/RoomMng.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="CheckoutDlg.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FindcheckoutDlg.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="RoomMng.cpp">
@@ -96,6 +99,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CheckoutDlg.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FindcheckoutDlg.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
